# owlbear-sunitro-api

./: .gitignore  README.md  characters.json  damage_advantage.csv  database.py  enums.ts  fake_database.json  generate_fake_db.py  main.py  models.py  pyproject.toml  requirements.txt  test_refactored_structure.py
docs/: api-reference.md  architecture.md  deployment.md  index.md  models.md  services.md  troubleshooting.md  usage-examples.md
scripts/: generate_fake_db.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  characters.py  combat.py  health.py
src/database/: __init__.py  repository.py  storage.py
src/models/: __init__.py  base.py  character.py  combat.py  item.py
src/services/: __init__.py  character_service.py  combat_service.py  combat_system.py
tests/unit/: test_character_service.py
